syntax = "proto3";

package tkd.userd.v1;

import "google/protobuf/struct.proto";
import "validate/validate.proto";
import "tkd/userd/v1/descriptor.proto";

message EMail {
  string address = 1 [(validate.rules).string.email = true];

  bool verified = 2;
}

message Address {
  string city_code = 1 [(validate.rules).string = {
    pattern: "[0-9]+",
    max_bytes: 16
  }];

  string city_name = 2 [(validate.rules).string.min_len = 1];

  string street = 3 [(validate.rules).string.min_len = 1];

  string extra = 4;
}

message User {
  string id = 1;

  string username = 2 [
    (validate.rules).string.min_len = 3
  ];

  string display_name = 3 [
    (validate.rules).string.min_len = 3,
    (tkd.userd.v1.allow_self_service) = true
  ];

  string first_name = 4 [
    (tkd.userd.v1.allow_self_service) = true
  ];
  string last_name = 5 [
    (tkd.userd.v1.allow_self_service) = true
  ];

  repeated Address addresses = 6 [
    (tkd.userd.v1.allow_self_service) = true
  ];

  repeated string phone_numbers = 7 [
    (tkd.userd.v1.allow_self_service) = true
  ];

  repeated EMail email_addresses = 8 [
    (tkd.userd.v1.allow_self_service) = true
  ];

  map<string, google.protobuf.Value> extra = 9;

  string avatar = 10 [
    (tkd.userd.v1.allow_self_service) = true
  ];
}
